Tue Oct 23 02:32:05 2001  George Lebl <jirka@5z.com>

	* gui/gdmXnestchooser.c: make this more useful, make it possible
	  to specify a custom Xnest/options to run and default to running
	  the one from the config.  Also add option to background the
	  process, and an option to run no chooser, just Xnest, and have it
	  print out the DISPLAY setting to use for the display.

Sat Oct 20 16:26:34 2001  George Lebl <jirka@5z.com>

	* configure.in, gui/Makefile.am: a bit of makefile cleanup and
	  make sure we REQUIRE libglade in the configure.in

Sat Oct 20 14:11:02 2001  George Lebl <jirka@5z.com>

	* daemon/errorgui.c, daemon/server.c: a bit of debug output.

	* daemon/slave.c: check the home dir, if it doesn't exist (or is not
	  a directory, then tell the user and try again.  Maybe we should
	  continue and let the session fail, should we?  I don't see any
	  merit in trying to log in with no home dir.  Also, clean up verify
	  on auth problems, in term handler don't reset the signal mask,
	  and fix some possible races and whack the chooser, same in
	  xioerror handler.  In slave_exit, mask the CHLD signal to avoid
	  races, and other race fixes

Sat Oct 20 13:31:07 2001  George Lebl <jirka@5z.com>

	* utils/gdmopen.c: set VT_NUMBER env var

	* gui/gdmwm.c: Fix a race for MapNotify so that newly created windows
	  are always focused

Sat Oct 20 12:03:14 2001  George Lebl <jirka@5z.com>

	* docs/C/Makefile.am: DESTDIR added patch by: frodol@dds.nl (Frodo
	  Looijaard)

Sat Oct 20 11:57:50 2001  George Lebl <jirka@5z.com>

	Patches from: Heath Nielson <heath@cs.byu.edu>

	* daemon/slave.c:  Fix from the FreeBSD bugtracker to fix a crash
	  related to setenv (foo, NULL, 1).

	* daemon/gdm-net.c:  Fix from the FreeBSD bugtracker to fix creation
	  of the local socket

Mon Oct 15 23:32:22 2001  George Lebl <jirka@5z.com>

	* Release 2.2.4.3

Mon Oct 15 23:28:45 2001  George Lebl <jirka@5z.com>

	* config/gdm.conf.in: the xdmcp indirect and manage waits were