@@ -85,8 +85,11 @@ get_free_display (void)
 static const char *host = "localhost";
 static char *xnest_binary = NULL;
 static char *xnest_options = NULL;
-static gboolean no_chooser = FALSE;
+static gboolean no_query = FALSE;
 static gboolean background = FALSE;
+static gboolean do_direct = FALSE;
+static gboolean do_broadcast = FALSE;
+static gboolean no_gdm_check = FALSE;
 
 static char display_num[BUFSIZ] = "";
 static char indirect_host[BUFSIZ] = "";
@@ -94,8 +97,11 @@ static char indirect_host[BUFSIZ] = "";
 static const struct poptOption options[] = {
 	{ "xnest", 'x', POPT_ARG_STRING, &xnest_binary, 0, N_("Xnest command line"), N_("STRING") },
 	{ "xnest-extra-options", 'o', POPT_ARG_STRING, &xnest_options, 0, N_("Extra options for Xnest"), N_("OPTIONS") },
-	{ "no-chooser", 'n', POPT_ARG_NONE, &no_chooser, 0, N_("Just run Xnest, no chooser"), NULL },
+	{ "no-query", 'n', POPT_ARG_NONE, &no_query, 0, N_("Just run Xnest, no query (no chooser)"), NULL },
+	{ "direct", 'd', POPT_ARG_NONE, &do_direct, 0, N_("Do direct query insted of indirect (chooser)"), NULL },
+	{ "broadcast", 'B', POPT_ARG_NONE, &do_broadcast, 0, N_("Run broadcast instead of indirect (chooser)"), NULL },
 	{ "background", 'b', POPT_ARG_NONE, &background, 0, N_("Run in background"), NULL },
+	{ "no-gdm-check", '\0', POPT_ARG_NONE, &no_gdm_check, 0, N_("Don't check for running gdm"), NULL },
 	{ NULL } 
 };
 
@@ -159,9 +165,16 @@ make_us_an_exec_vector (const char *xnest)
 		}
 	}
 
-	if ( ! no_chooser) {
-		vector[ii++] = "-indirect";
-		vector[ii++] = indirect_host;
+	if ( ! no_query) {
+		if (do_broadcast) {
+			vector[ii++] = "-broadcast";
+		} else if (do_direct) {
+			vector[ii++] = "-query";
+			vector[ii++] = indirect_host;
+		} else {
+			vector[ii++] = "-indirect";
+			vector[ii++] = indirect_host;
+		}
 	}
 
 	return vector;
@@ -211,7 +224,10 @@ main (int argc, char *argv[])
 		return 0;
 	}
 
-	if (strcmp (host, "localhost") == 0) {
+	if ( ! no_query &&
+	     ! do_broadcast &&
+	     ! no_gdm_check &&
+	    strcmp (host, "localhost") == 0) {
 		FILE *fp = NULL;
 		long pid;
 		
@@ -277,7 +293,7 @@ main (int argc, char *argv[])
 
 	if (background) {
 		if (fork () > 0) {
-			exit (0);
+			_exit (0);
 		}
 	}
 
