@@ -1,3 +1,10 @@
+Tue Oct 23 15:17:23 2001  George Lebl <jirka@5z.com>
+
+	* gui/gdmXnestchooser.c: add --broadcast, --direct and
+	  --no-gdm-check, rename --no-chooser to --no-query, fix
+	  backgrounding vs. gtk and don't do checks when we don't need
+	  to (on no-query, broadcast or no-gdm-check)
+
 Tue Oct 23 02:32:05 2001  George Lebl <jirka@5z.com>
 
 	* gui/gdmXnestchooser.c: make this more useful, make it possible
